# pipalette

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: release.yml
deploy/: apply-update.sh  bench-render.py  install.sh  lean-pi.sh  pipalette-update.service  pipalette.avahi.service  pipalette.service  probe-device.py  sudoers.pipalette
docs/: build.sh  calibration_technical.md  metadata.yaml  screenshots.py  template.tex
docs/chapters/: 01-rolls.md  02-film-tables.md  03-device.md
pipalette/: __init__.py  app.py  calibration.py  calibration_lut.py  calibration_shape.py  config.py  device.py  exposure.py  film_tables.py  rolls.py  updates.py  wedge_render.py  wizard_baselines.py
scripts/: generate_calibration_wedge.py  release.sh
static/css/: app.css
static/js/: app.js
templates/: base.html  device.html  film_table_detail.html  film_tables.html  roll_detail.html  rolls.html
templates/partials/: film_table_row.html  film_table_wizard.html  frame_card.html  topbar.html
